libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__list__tests__parse_empty_list.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/list.rs
description: Parses an empty list
expression: "{\"#list\": []}"
---
Expr#4294967040@1
  ExprKind (List)
    ListExpr#4294967040@0
