libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__list__tests__parse_invalid_list_value.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/list.rs
description: Rejects non-array values for lists
expression: "{\"#list\": {\"not\": \"an-array\"}}"
---
[31m[parser::object::list-expected-array] Error:[0m Parser
   ╭─[ <unknown>:1:11 ]
   │
 1 │ {"#list": {"not": "an-array"}}
   │           ┬  
   │           ╰── Expected an array here
   │ 
   │ Help: The #list construct requires an array of elements, but found `{`. Use square brackets to define the list elements: [element1, element2, ...]
   │ 
   │ Note: Lists in J-Expr represent variable-length collections where all elements must have the same type.
───╯
