libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__list__tests__parse_list_with_complex_type.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/list.rs
description: Parses a list with a complex type annotation
expression: "{\"#list\": [], \"#type\": \"(element: String, max: Int)\"}"
---
Expr#4294967040@13
  ExprKind (List)
    ListExpr#4294967040@0
      Type#4294967040@12
        TypeKind (Struct)
          StructType#4294967040@12
            StructField#4294967040@6 (name: element)
              Type#4294967040@5
                TypeKind (Path)
                  Path#4294967040@5 (rooted: false)
                    PathSegment#4294967040@4 (name: String)
            StructField#4294967040@11 (name: max)
              Type#4294967040@10
                TypeKind (Path)
                  Path#4294967040@10 (rooted: false)
                    PathSegment#4294967040@9 (name: Int)
