libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__list__tests__parse_list_with_mixed_types.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/list.rs
description: Parses a list with mixed types of values
expression: "{\"#list\": [\n            {\"#literal\": \"string\"},\n            {\"#literal\": 42},\n            {\"#literal\": true}\n        ]}"
---
Expr#4294967040@7
  ExprKind (List)
    ListExpr#4294967040@6
      ListElement#4294967040@1
        Expr#4294967040@1
          ExprKind (Literal)
            LiteralExpr#4294967040@0
              LiteralKind (String)
                StringLiteral (string)
      ListElement#4294967040@3
        Expr#4294967040@3
          ExprKind (Literal)
            LiteralExpr#4294967040@2
              LiteralKind (Integer)
                IntegerLiteral (42)
      ListElement#4294967040@5
        Expr#4294967040@5
          ExprKind (Literal)
            LiteralExpr#4294967040@4
              LiteralKind (True)
