libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__list__tests__parse_list_with_nested_expressions.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/list.rs
description: Parses a list with nested expressions
expression: "{\"#list\": [\n            [\"add\", {\"#literal\": 1}, {\"#literal\": 2}],\n            {\"#literal\": \"simple\"},\n            {\"#dict\": {\"key\": {\"#literal\": \"value\"}}}\n        ]}"
---
Expr#4294967040@18
  ExprKind (List)
    ListExpr#4294967040@17
      ListElement#4294967040@8
        Expr#4294967040@8
          ExprKind (Call)
            CallExpr#4294967040@8
              Expr#4294967040@3
                ExprKind (Path)
                  Path#4294967040@3 (rooted: false)
                    PathSegment#4294967040@2 (name: add)
              Argument#4294967040@5
                Expr#4294967040@5
                  ExprKind (Literal)
                    LiteralExpr#4294967040@4
                      LiteralKind (Integer)
                        IntegerLiteral (1)
              Argument#4294967040@7
                Expr#4294967040@7
                  ExprKind (Literal)
                    LiteralExpr#4294967040@6
                      LiteralKind (Integer)
                        IntegerLiteral (2)
      ListElement#4294967040@10
        Expr#4294967040@10
          ExprKind (Literal)
            LiteralExpr#4294967040@9
              LiteralKind (String)
                StringLiteral (simple)
      ListElement#4294967040@16
        Expr#4294967040@16
          ExprKind (Dict)
            DictExpr#4294967040@15
              DictEntry#4294967040@14
                Expr#4294967040@11
                  ExprKind (Literal)
                    LiteralExpr#4294967040@11
                      LiteralKind (String)
                        StringLiteral (key)
                Expr#4294967040@13
                  ExprKind (Literal)
                    LiteralExpr#4294967040@12
                      LiteralKind (String)
                        StringLiteral (value)
