libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__list__tests__parse_nested_lists.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/list.rs
description: Parses nested lists
expression: "{\"#list\": [\n            {\"#list\": [{\"#literal\": 1}, {\"#literal\": 2}]},\n            {\"#list\": [{\"#literal\": 3}, {\"#literal\": 4}]}\n        ]}"
---
Expr#4294967040@13
  ExprKind (List)
    ListExpr#4294967040@12
      ListElement#4294967040@5
        Expr#4294967040@5
          ExprKind (List)
            ListExpr#4294967040@4
              ListElement#4294967040@1
                Expr#4294967040@1
                  ExprKind (Literal)
                    LiteralExpr#4294967040@0
                      LiteralKind (Integer)
                        IntegerLiteral#4294967040@0 (1)
              ListElement#4294967040@3
                Expr#4294967040@3
                  ExprKind (Literal)
                    LiteralExpr#4294967040@2
                      LiteralKind (Integer)
                        IntegerLiteral#4294967040@2 (2)
      ListElement#4294967040@11
        Expr#4294967040@11
          ExprKind (List)
            ListExpr#4294967040@10
              ListElement#4294967040@7
                Expr#4294967040@7
                  ExprKind (Literal)
                    LiteralExpr#4294967040@6
                      LiteralKind (Integer)
                        IntegerLiteral#4294967040@6 (3)
              ListElement#4294967040@9
                Expr#4294967040@9
                  ExprKind (Literal)
                    LiteralExpr#4294967040@8
                      LiteralKind (Integer)
                        IntegerLiteral#4294967040@8 (4)
