libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__list__tests__parse_unknown_key_in_list.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/list.rs
description: Rejects unknown keys in list objects
expression: "{\"#list\": [], \"unknown\": {\"#literal\": \"value\"}}"
---
[31m[parser::object::unknown-key] Error:[0m Parser
   ╭─[ <unknown>:1:15 ]
   │
 1 │ {"#list": [], "unknown": {"#literal": "value"}}
   │               ────┬────  
   │                   ╰────── Replace `unknown` with a valid key
   │ 
   │ Help: This J-Expr object only accepts these specific keys: `#type`
───╯
